--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ body{
     min-height: 100vh;
 }
 
+main{
+    min-height: calc( 100vh - 119px );
+}
+
 .red{
     color: red;
 }
@@ -40,4 +44,8 @@ footer > .panel{
     font-size: 14px;
     text-align: center;
     border-radius: 0px;
+}
+
+.navbar{
+    margin-bottom: 0px !important;
 }
