--- a/views/home.html
+++ b/views/home.html
@@ -1,4 +1,3 @@
-
 <div class="well well-lg">
     <h1>Home Page</h1>
     <p class="text-success">
@@ -10,6 +9,7 @@
             dicat scribentur te, ne propriae argumentum quo. Sonet molestiae duo ei, est ea utamur vituperatoribus. Ut 
             moderatius vituperata nec.
     </p>
-    <random-data>{{list}}</random-data>
     <a type="button" class="btn btn-success" href="#!/data">Go to Data</a>    
+    <hr />
+    <random-data datatopass="list" titletopass="'Random Data'">{{list}}</random-data>
 </div>
