--- a/views/home.html
+++ b/views/home.html
@@ -11,5 +11,6 @@
     </p>
     <a type="button" class="btn btn-success" href="#!/data">Go to Data</a>    
     <hr />
-    <random-data datatopass="list" titletopass="'Random Data'">{{list}}</random-data>
+    <random-data data="list" title="'Random Data'">
+    </random-data>
 </div>
