--- a/views/random.html
+++ b/views/random.html
@@ -1,4 +1,5 @@
-<div class="well well-lg">
-    <h3 class="text-center">{{titletopass}}</h3>
-    <img ng-src="{{list[random].thumb}}" />
+<div class="well well-lg bg-white text-center">
+    <h3>{{title}}</h3>
+    <p>Checkout random data</p>
+    <img class="center-block" ng-src="{{data[random].thumb}}" />
 </div>
