--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ main{
     margin: 0 auto;
 }
 
+main > div{
+    width: inherit;
+}
+
 .bg-white{
     color: black;
     background-color: white;
@@ -54,6 +58,14 @@ main{
     flex-direction: column;
 }
 
+.flex-jc-center{
+    justify-content: center;
+}
+
+.flex-ai-center{
+    align-items: center;
+}
+
 footer > .panel{
     background-color: rgb(19, 19, 19);
     margin-bottom: 0;
@@ -71,15 +83,13 @@ footer > .panel{
 /* ANGULAR ANIMATION */
 main.ng-enter{
     transition: 0.5s ease-in-out all;
-    transform: translateX(0%);
     opacity: 0;
 }
 
 main.ng-enter.ng-enter-active{
     opacity: 1;
-    transform: translateX(100%);
 }
-
+/* 
 main.ng-leave{
     transition: 0.5s ease-in-out all;
     transform: translateX(0%);
@@ -89,7 +99,7 @@ main.ng-leave{
 main.ng-leave.ng-leave-active{
     transform: translateX(-100%);
     opacity: 0;
-}
+} */
 
 .list li.ng-enter{
     transition: 1s ease-in-out all;
